[package]
name = "crypto_box"
version = "0.2.0-pre"
description = """
Pure Rust implementation of NaCl's crypto_box public-key authenticated
encryption primitive which combines the X25519 Elliptic Curve Diffie-Hellman
function and the XSalsa20Poly1305 authenticated encryption cipher
"""
authors = ["RustCrypto Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/crypto_box"
homepage = "https://github.com/RustCrypto/AEADs"
repository = "https://github.com/RustCrypto/AEADs/tree/master/crypto_box"
categories = ["cryptography", "no-std"]
keywords = ["nacl", "libsodium", "public-key", "x25519", "xsalsa20poly1305"]

[dependencies]
rand_core = "0.5"
salsa20 = { version = "= 0.5.0-pre", features = ["hsalsa20"] }
zeroize = { version = "1", default-features = false }

[dependencies.x25519-dalek]
version = "0.6"
default-features = false
features = ["u64_backend"]

[dependencies.xsalsa20poly1305]
version = "= 0.4.0-pre"
default-features = false
features = ["rand_core"]
path = "../xsalsa20poly1305"

[dev-dependencies]
rand = "0.7"

[features]
default = ["alloc"]
alloc = ["xsalsa20poly1305/alloc"]
heapless = ["xsalsa20poly1305/heapless"]
