[package]
name = "crypto_box"
version = "0.6.0-pre"
description = """
Pure Rust implementation of NaCl's crypto_box public-key authenticated
encryption primitive which combines the X25519 Elliptic Curve Diffie-Hellman
function and the XSalsa20Poly1305 authenticated encryption cipher
"""
authors = ["RustCrypto Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/crypto_box"
homepage = "https://github.com/RustCrypto/AEADs"
repository = "https://github.com/RustCrypto/AEADs/tree/master/crypto_box"
categories = ["cryptography", "no-std"]
keywords = ["nacl", "libsodium", "public-key", "x25519", "xsalsa20poly1305"]

[dependencies]
chacha20 = { version = "0.7.1", features = ["expose-core", "hchacha"] }
rand_core = "0.6"
salsa20 = { version = "0.8", features = ["hsalsa20"] }
x25519-dalek = { version = "1", default-features = false }
zeroize = { version = "1", default-features = false }

[dependencies.chacha20poly1305]
version = "0.8"
default-features = false
features = ["xchacha20poly1305"]
path = "../chacha20poly1305"

[dependencies.xsalsa20poly1305]
version = "0.7"
default-features = false
features = ["rand_core"]
path = "../xsalsa20poly1305"

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }

[features]
default = ["alloc", "u64_backend"]
std = ["rand_core/std", "xsalsa20poly1305/std"]
alloc = ["xsalsa20poly1305/alloc"]
heapless = ["xsalsa20poly1305/heapless"]
u32_backend = ["x25519-dalek/u32_backend"]
u64_backend = ["x25519-dalek/u64_backend"]
