[package]
name = "deoxys"
version = "0.2.0-rc.2"
description = """
Pure Rust implementation of the Deoxys Authenticated Encryption with Associated
Data (AEAD) cipher, including the Deoxys-II variant which was selected by the
CAESAR competition as the first choice for in-depth security
"""
authors = ["RustCrypto Developers, zer0x64"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/deoxys"
homepage = "https://github.com/RustCrypto/AEADs/tree/master/deoxys"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "deoxys", "deoxys-i", "deoxys-ii"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.5", default-features = false }
aes = { version = "0.9.0-rc.2", features = ["hazmat"], default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.5", features = ["dev"], default-features = false }
hex-literal = "1"

[features]
default = ["alloc", "getrandom"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
getrandom = ["aead/getrandom"]
rand_core = ["aead/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
