[package]
name = "dndk-gcm"
version = "0.1.0-rc.1"
description = """
Pure Rust implementation of the DNDK-GCM extended-nonce AEAD (without key commitment).
"""
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/dndk-gcm"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "gcm", "dndk", "encryption"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.4", default-features = false }
aes = "0.9.0-rc.2"
aes-gcm = { version = "0.11.0-rc.2", default-features = false, features = ["aes"] }
cipher = "0.5.0-rc.2"
aead-stream = { version = "0.6.0-rc.2", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.4", features = ["dev"], default-features = false }
hex-literal = "1"

[features]
default = ["alloc", "getrandom"]
alloc = ["aead/alloc", "aead-stream?/alloc", "aes-gcm/alloc"]
arrayvec = ["aead/arrayvec", "aes-gcm/arrayvec"]
getrandom = ["aes-gcm/getrandom"]
rand_core = ["aead/rand_core", "aes-gcm/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
