[package]
name = "mgm"
version = "0.4.6"
description = "Generic implementation of the Multilinear Galois Mode (MGM) cipher"
authors = ["RustCrypto Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/mgm"
homepage = "https://github.com/RustCrypto/AEADs"
repository = "https://github.com/RustCrypto/AEADs/tree/master/mgm"
categories = ["cryptography", "no-std"]
keywords = ["encryption", "aead"]

[dependencies]
aead = { version = "0.4", default-features = false }
cipher = "0.4"
subtle = { version = ">=2, <2.5", default-features = false }
cfg-if = "1"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
aead = { version = "0.4", features = ["dev"], default-features = false }
kuznyechik = "0.7"
magma = "0.7"
hex-literal = "0.2"

[features]
default = ["alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]
stream = ["aead/stream"]
force-soft = [] # Disable support for hardware intrinsics
