[workspace]

[package]
name = "mgm"
version = "0.5.0-pre.1"
description = "Generic implementation of the Multilinear Galois Mode (MGM) cipher"
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/mgm"
homepage = "https://github.com/RustCrypto/AEADs/tree/master/mgm"
repository = "https://github.com/RustCrypto/AEADs"
categories = ["cryptography", "no-std"]
keywords = ["encryption", "aead"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.5", default-features = false }
cipher = "0.3"
subtle = { version = "2", default-features = false }
cfg-if = "1"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
aead = { version = "0.5", features = ["dev"], default-features = false }
kuznyechik = "0.7"
magma = "0.7"
hex-literal = "1"

[features]
default = ["alloc", "getrandom"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
getrandom = ["aead/getrandom", "rand_core"]
rand_core = ["aead/rand_core"]
stream = ["aead/stream"]
force-soft = [] # Disable support for hardware intrinsics
