[package]
name = "ocb3"
version = "0.2.0-rc.2"
description = """
Pure Rust implementation of the Offset Codebook Mode v3 (OCB3) Authenticated Encryption with
Associated Data (AEAD) Cipher as described in RFC7253
"""
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/ocb3"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "encryption", "ocb"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.5", default-features = false }
cipher = "0.5.0-rc.3"
ctr = "0.10.0-rc.2"
dbl = "0.5"
subtle = { version = "2", default-features = false }
aead-stream = { version = "0.6.0-rc.2", optional = true, default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.5", features = ["dev"], default-features = false }
aes = { version = "0.9.0-rc.2", default-features = false }
hex-literal = "1"

[features]
default = ["alloc", "getrandom"]
alloc = ["aead/alloc", "aead-stream?/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
getrandom = ["aead/getrandom"]
rand_core = ["aead/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
