[package]
name = "sundae"
version = "0.1.0"
description = """
Pure Rust implementation of the SUNDAE
Authenticated Encryption with Associated Data (AEAD) Cipher
"""
authors = ["RustCrypto Developers", "Schmid7k"]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/sundae"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "sundae", "encryption", "mac"]
categories = ["cryptography", "no-std"]
rust-version = "1.56"

[dependencies]
aead = { version = "0.5.1", default-features = false }
aes = { version = "0.8.1", optional = true }
cipher = "0.4.3"

[dev-dependencies]
criterion = "0.3.5"
criterion-cycles-per-byte = "0.1.2"
rand = "0.8.5"

[features]
default = ["aes", "alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "sundae_enc"
path = "benches/sundae_enc.rs"
harness = false
