[package]
name = "xaes-256-gcm"
version = "0.1.0-rc.2"
description = """
Pure Rust implementation of the XAES-256-GCM extended-nonce Authenticated
Encryption with Associated Data (AEAD).
"""
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/xaes-256-gcm"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "xaes", "encryption", "extended-nonce"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.8", default-features = false }
aes = "0.9.0-rc.2"
aes-gcm = { version = "0.11.0-rc.2", default-features = false, features = ["aes"] }
cipher = "0.5.0-rc.6"
aead-stream = { version = "0.6.0-rc.2", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.8", features = ["dev"], default-features = false }
hex-literal = "1"

[features]
default = ["alloc", "getrandom"]
alloc = ["aead/alloc", "aead-stream?/alloc", "aes-gcm/alloc"]
arrayvec = ["aead/arrayvec", "aes-gcm/arrayvec"]
getrandom = ["aes-gcm/getrandom"]
rand_core = ["aead/rand_core", "aes-gcm/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
