[package]
name = "xsalsa20poly1305"
version = "0.7.0-pre"
description = """
Pure Rust implementation of the XSalsa20Poly1305 (a.k.a. NaCl crypto_secretbox)
authenticated encryption algorithm
"""
authors = ["RustCrypto Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/xsalsa20poly1305"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "salsa20", "poly1305", "xsalsa20"]
categories = ["cryptography", "no-std"]

[dependencies]
aead = { version = "0.4", default-features = false }
salsa20 = { version = "0.8", features = ["xsalsa20", "zeroize"] }
poly1305 = "0.6"
rand_core = { version = "0.5", optional = true }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

[features]
default = ["alloc", "rand_core"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]
stream = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
