[package]
name = "xsalsa20poly1305"
version = "0.9.0-pre.2"
description = """
Pure Rust implementation of the XSalsa20Poly1305 (a.k.a. NaCl crypto_secretbox)
authenticated encryption algorithm
"""
authors = ["RustCrypto Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/xsalsa20poly1305"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "salsa20", "poly1305", "xsalsa20"]
categories = ["cryptography", "no-std"]
rust-version = "1.56"

[dependencies]
aead = { version = "0.5", default-features = false }
salsa20 = { version = "0.10", features = ["zeroize"] }
poly1305 = "=0.8.0-pre.2"
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

[features]
default = ["alloc", "getrandom"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
getrandom  = ["aead/getrandom", "rand_core"]
heapless = ["aead/heapless"]
rand_core = ["aead/rand_core"]
stream = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
